--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -15,11 +15,15 @@ html {
 }
 
 // CURRENT COLOR
+$_animate_distance: 110%;
+
 .color_bg {
 	display: block;
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	@include box_sizing_default;
+	box-shadow: 0 0 50px #000000;
 	
 	&.is_animated {
 		-webkit-transition: -webkit-transform .5s ease-out;
@@ -28,24 +32,24 @@ html {
 	}
 		
 	&.slide_anim_up {
-		-webkit-transform: translate3d(0, -100%, 0);
-		-moz-transform: translate3d(0, -100%, 0);
-		transform: translate3d(0, -100%, 0);
+		-webkit-transform: translate3d(0, -$_animate_distance, 0);
+		-moz-transform: translate3d(0, -$_animate_distance, 0);
+		transform: translate3d(0, -$_animate_distance, 0);
 	}
 	&.slide_anim_down {
-		-webkit-transform: translate3d(0, 100%, 0);
-		-moz-transform: translate3d(0, 100%, 0);
-		transform: translate3d(0, 100%, 0);
+		-webkit-transform: translate3d(0, $_animate_distance, 0);
+		-moz-transform: translate3d(0, $_animate_distance, 0);
+		transform: translate3d(0, $_animate_distance, 0);
 	}
 	&.slide_anim_left {
-		-webkit-transform: translate3d(-100%, 0, 0);
-		-moz-transform: translate3d(-100%, 0, 0);
-		transform: translate3d(-100%, 0, 0);
+		-webkit-transform: translate3d(-$_animate_distance, 0, 0);
+		-moz-transform: translate3d(-$_animate_distance, 0, 0);
+		transform: translate3d(-$_animate_distance, 0, 0);
 	}
 	&.slide_anim_right {
-		-webkit-transform: translate3d(100%, 0, 0);
-		-moz-transform: translate3d(100%, 0, 0);
-		transform: translate3d(100%, 0, 0);
+		-webkit-transform: translate3d($_animate_distance, 0, 0);
+		-moz-transform: translate3d($_animate_distance 0, 0);
+		transform: translate3d($_animate_distance, 0, 0);
 	}
 }
 #color_bg_static {
@@ -71,7 +75,7 @@ section {
 	padding: 2%;
 	@include box_sizing_default;
 	
-	a {
+	.toggle_feature {
 		display: block;
 		text-decoration: none;
 		@include font('avenir_bold');
@@ -87,6 +91,20 @@ section {
 			&.feature_enabled {
 				color: $color_black_default;
 			}
+			.toggle_feature_sub {
+				color: transparentize($color_black_default, .8);
+				
+				&.feature_sub_enabled {
+					color: $color_black_default;
+				}
+			}
+		}
+	}
+	.toggle_feature_sub {
+		color: transparentize($color_white_default, .8);
+		
+		&.feature_sub_enabled {
+			color: $color_white_default;
 		}
 	}
 }
